src/login/main.css
:root {
    --pf-global--primary-color--100: #ab8157;
    --pf-global--primary-color--200: #122020;
}

body {
    background: none!important;
}

a {
    color: #ab8157;
}

#kc-header {
    color: unset;
    text-align: center;
    margin-bottom: 3em;
}

#kc-header-wrapper {
    padding: 0;
}

#kc-page-title {
    text-align: left;
    font-weight: bold;
}

